--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>Sorteio Fake Corrida de graça</title>
+    <title>Sorteio Fake</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="link/taglink/ico/fortuna.svg" rel="shortcut icon">
   </head>
