--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p id="paragraphResult">
-  Clique no botão<br>"SORTEIO"<br>para participar do sorteio de uma corrida grátis
+  Clique no botão azul abaixo para concorrer ao sorteio.
     </p>
     <button id="buttonRandom" onclick="runRaffle()">  
   Sorteio
