--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html lang="en">
+<html lang="pt-br">
   <head>
-    <title>Sorteio Fake</title>
+    <title>"Sorteio"</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="link/taglink/ico/fortuna.svg" rel="shortcut icon">
   </head>
